commit example analysis files

--- a/analysis/example_analysis.Rmd
+++ b/analysis/example_analysis.Rmd
@@ -30,6 +30,18 @@ print()
 
 ```{r}
 data %>%
+inner_join(annotations, by = "strain") %>%
+print()
+```
+
+```{r}
+data %>%
+left_join(annotations, by = "strain") %>%
+print()
+```
+
+```{r}
+data %>%
 right_join(annotations, by = "strain") %>%
 print()
 ```
@@ -42,16 +54,49 @@ print()
 ```
 
 ```{r}
-
+data <- read_tsv("../data/tables/example_dataset_4.tsv") %>%
+print(n = 10)
 ```
 
 ```{r}
-
+data %>%
+group_by(strain) %>%
+print(n = 10)
 ```
 
 ```{r}
-
+data %>%
+group_by(strain) %>%
+summarize(mean_yfp = mean(yfp), mean_rfp = mean(rfp)) %>%
+print()
 ```
 
+```{r}
+data %>%
+group_by(strain) %>%
+summarize(mean_yfp = mean(yfp), mean_rfp = mean(rfp),
+se_yfp = sd(yfp) / sqrt(n()),
+se_rfp = sd(rfp) / sqrt(n())) %>%
+print()
+```
 
+```{r}
+data %>%
+group_by(strain) %>%
+summarize(mean_yfp = mean(yfp), mean_rfp = mean(rfp)) %>%
+mutate(mean_ratio = mean_yfp / mean_rfp) %>%
+left_join(annotations, by = "strain") %>%
+print()
+```
 
+```{r}
+data %>%
+group_by(strain) %>%
+summarize(mean_yfp = mean(yfp), mean_rfp = mean(rfp)) %>%
+mutate(mean_ratio = mean_yfp / mean_rfp) %>%
+left_join(annotations, by = "strain") %>%
+ggplot(aes(x = kozak_region, y = mean_ratio,
+color = insert_sequence, group = insert_sequence)) +
+geom_line() +
+geom_point()
+```
